fix homepage alignment

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
 
-  text-align: center;
+  
   /* background:lightblue; */
   /* background:lightseagreen; */
   
